# CEX_Analytics_Project

./: 2025-07-16 4_34pm (1).csv  2025-07-16 4_34pm (2).csv  INTERACTION_MODE_IMPLEMENTATION_SUMMARY.md  INTERACTION_MODE_README.md  README.md  TLADS Methodology Walk Through Making Use of Canvases.docx  TLADS Step 2- Emphathise With Stakeholders.docx  TLADS Step 3- Model Business Entities.docx  TLADS Step 4a- Identify and Assess Use Cases.docx  TLADS Step 4b - Prioritise Use Cases.docx  TLADS Step 6 - Explore Analytic Algorithms.docx  demo_exclude_no_columns.py  download-query-results-5ae749be-3d31-468c-a5e4-bf17939310c3.csv  example_hdbscan_tuning.py  linear_regression_model.pkl  pyproject.toml  query_initial_data.sql  query_new_raw_data.sql  quick_start_exclude_no_columns.py  requirements.txt  sample_all_columns_config.yaml  test_exclude_no_columns.py  test_practical_exclude_no_columns.py  test_scaling.py  unused  validation_report.md
Notebooks/: Behavioural_Volatility_EDA.ipynb  Cross_Domain_EDA.ipynb  analysing_plotly_visualisations.ipynb  clustering_eda_continue.ipynb  hbdscan_evaluation.ipynb  identifying_archetypes.ipynb  initial_data_EDA.ipynb  interaction_mode_cluster_evaluation.ipynb  interaction_mode_distance_evaluation.ipynb  no_umap_clustering.ipynb  scaler_testing.ipynb
Notebooks for eda/: EDA.ipynb
Scripts/: feature_engineering.py
Source_Code_Package/: __init__.py
TLADS_Documents/: TLADS Step 1 Assess Business Initiative.docx  TLADS Step 5 - Brainstorm Scores and Features.docx
clustering_output/: hdbscan_evaluation_results.csv  hdbscan_evaluation_summary.json  umap_parameter_tuning_results.yaml
data/: data_description.md
docs/: Behavioral_Volatility_Score_Documentation.md  HDBSCAN_clustering_documentation.md  Interaction_Mode_Cluster_Selection_Documentation.md  Interaction_Mode_Clustering_Documentation.md  Phase_1_Implementation_Summary.md  Script_Migration_Recommendation.md  exclude_no_columns_functionality.md
scripts/: analytic_scores_merging_execution.py  behavioral_volatility_feature_engineering.py  calculate_distance_from_median.py  interaction_mode_cluster_selection_v2.py  interaction_mode_distance_scores_execution.py  prepare_cluster_datasets.py  produce_dashboard_html.py  test_model_AS_1.py  train_model_AS_1.py  validate_phase_1.py
tests/: test_behavioral_volatility.py  test_behavioural_volatility.py  test_cluster_dataset_saving.py  test_config_behavioral_volatility_yaml.py  test_config_behavioural_volatility_yaml.py  test_config_cluster_yaml.py  test_config_interaction_mode_yaml.py  (+12 more)
(+227 files in other folders)
